full login/signup implemented in patient management